Refactor tokenizer.yaml for clarity and structure
Updated tokenizer configuration and improved input handling.

--- a/tokenizer.yaml
+++ b/tokenizer.yaml
@@ -1,6 +1,5 @@
-name: Train Byte-Level BPE Tokenizer (NESY v21)
-description: Trains a byte-level BPE tokenizer on a newline-delimited text corpus using nesy-factory’s ByteLevelBPETokenizer.
-
+name: Tokenizer
+description: Trains a byte-level BPE tokenizer on a newline-delimited text corpus using nesy-factory's ByteLevelBPETokenizer.
 inputs:
   - name: train_corpus
     type: Data
@@ -12,11 +11,10 @@ inputs:
     default: "2"
   - name: add_bos_eos
     type: String
-    default: "true"          # "true"/"false" (parsed inside the script)
+    default: "true"
   - name: special_tokens
     type: String
     default: "[PAD],[UNK],[BOS],[EOS]"
-
 outputs:
   - name: tokenizer_json
     type: Model
@@ -24,7 +22,6 @@ outputs:
     type: Data
   - name: schema_json
     type: Data
-
 implementation:
   container:
     image: gurpreetgandhi/nesy-factory:v21
@@ -34,12 +31,8 @@ implementation:
       - -c
       - |-
         set -o pipefail
-
-        # write a tiny wrapper that calls nesy-factory's ByteLevelBPETokenizer
         cat >/tmp/train_tokenizer_nesy_v21.py <<'PY'
         import argparse, json, os, sys
-
-        # Try both module paths (some builds export it under tokenize.py, others as tokenizer.py)
         TokenizerClass = None
         import_errors = {}
         try:
@@ -52,19 +45,15 @@ implementation:
                 TokenizerClass = _Tok2
             except Exception as e2:
                 import_errors["nesy_factory.language_model.tokenizer"] = str(e2)
-
         def parse_bool(v: str) -> bool:
             return str(v).strip().lower() in ("true", "1", "yes", "y")
-
         def build_flat_schema(a, specials_parsed, add_bos_eos_resolved, actual_vocab_size=None):
             schema = {
                 "train_corpus": a.train_corpus,
                 "vocab_size": a.vocab_size,
                 "min_frequency": a.min_frequency,
-                "add_bos_eos": a.add_bos_eos,          # raw input string
+                "add_bos_eos": a.add_bos_eos,
                 "special_tokens": a.special_tokens,
-
-                # effective config (flat)
                 "model_type": "BPE",
                 "pre_tokenizer": "ByteLevel",
                 "decoder": "ByteLevel",
@@ -76,7 +65,6 @@ implementation:
             if actual_vocab_size is not None:
                 schema["actual_vocab_size"] = actual_vocab_size
             return schema
-
         def main():
             ap = argparse.ArgumentParser()
             ap.add_argument("--train-corpus", required=True)
@@ -88,8 +76,6 @@ implementation:
             ap.add_argument("--training-report", required=True)
             ap.add_argument("--schema-output", required=True)
             a = ap.parse_args()
-
-            # Fail fast if class couldn't be imported
             if TokenizerClass is None:
                 err = {
                     "status": "error",
@@ -101,16 +87,13 @@ implementation:
                     json.dump(err, f, indent=2)
                 print("[FATAL] ByteLevelBPETokenizer import failed. See training_report for details.", file=sys.stderr)
                 sys.exit(1)
-
             specials = [s.strip() for s in (a.special_tokens or "").split(",") if s.strip()]
             add_bos_eos_flag = parse_bool(a.add_bos_eos)
-
             print(f"[INFO] Training tokenizer (nesy-factory) on {a.train_corpus}")
             print(f"[INFO] Target vocab size: {a.vocab_size}")
             print(f"[INFO] Min frequency: {a.min_frequency}")
             print(f"[INFO] Special tokens: {specials}")
             print(f"[INFO] Add BOS/EOS: {add_bos_eos_flag}")
-
             tok = TokenizerClass()
             report = tok.run(
                 text_file=a.train_corpus,
@@ -119,17 +102,11 @@ implementation:
                 special_tokens=a.special_tokens,
                 add_bos_eos=add_bos_eos_flag,
             )
-
-            # Save tokenizer JSON through the class API
             os.makedirs(os.path.dirname(a.tokenizer_json) or ".", exist_ok=True)
             tok.save(a.tokenizer_json)
-
-            # Save training report (dict returned by tok.run)
             os.makedirs(os.path.dirname(a.training_report) or ".", exist_ok=True)
             with open(a.training_report, "w", encoding="utf-8") as f:
                 json.dump(report, f, indent=2)
-
-            # Save a flat schema JSON to mirror your earlier brick’s output shape
             schema_flat = build_flat_schema(
                 a,
                 specials_parsed=specials,
@@ -139,7 +116,6 @@ implementation:
             os.makedirs(os.path.dirname(a.schema_output) or ".", exist_ok=True)
             with open(a.schema_output, "w", encoding="utf-8") as f:
                 json.dump(schema_flat, f, indent=2)
-
             print(f"[SUCCESS] Tokenizer saved to {a.tokenizer_json}")
             print(f"[SUCCESS] Training report saved to {a.training_report}")
             print(f"[SUCCESS] Schema JSON saved to {a.schema_output}")
@@ -148,23 +124,21 @@ implementation:
         if __name__ == "__main__":
             main()
         PY
-
-        # run the helper with all CLI args the brick passes
         python3 -u /tmp/train_tokenizer_nesy_v21.py "$@"
     args:
       - --train-corpus
-      - {inputPath: train_corpus}
+      - inputPath: train_corpus
       - --vocab-size
-      - {inputValue: vocab_size}
+      - inputValue: vocab_size
       - --min-frequency
-      - {inputValue: min_frequency}
+      - inputValue: min_frequency
       - --special-tokens
-      - {inputValue: special_tokens}
+      - inputValue: special_tokens
       - --add-bos-eos
-      - {inputValue: add_bos_eos}
+      - inputValue: add_bos_eos
       - --tokenizer-json
-      - {outputPath: tokenizer_json}
+      - outputPath: tokenizer_json
       - --training-report
-      - {outputPath: training_report}
+      - outputPath: training_report
       - --schema-output
-      - {outputPath: schema_json}
+      - outputPath: schema_json
